exports[`App should detach 1`] = `
<div class="app-container light-theme">
  <div class="initial-warning-container">
    <div>If you do not see your components here, try refreshing the page while keeping this panel open.
      <br>
      <i>Or there may be no Metal.js components on the page. metal@^2.6.2 required.
        <a href="https://github.com/bryceosterhaus/metal-devtools" target="blank_">Repo</a>
      </i>
    </div>
  </div>
  <div class="resize-container"></div>
  <div class="state-pane-container">
    <div class="header">Component: </div>
    <div>
      <i>No Component Data</i>
    </div>
  </div>
</div>
`;

exports[`App should render 1`] = `
<div class="app-container light-theme">
  <div class="roots-wrapper">
    <div style="" class="options" title="Freezes highlights by expanded components">
      <label for="freezeUpdates">Freeze Updates</label>
      <input name="freezeUpdates" type="checkbox">
    </div>
    <div class="tree-container">
      <div class="node-wrapper   " style="padding-left: 12px;">
        <span data-nodeid="foo" class="node-name-container">&lt;
          <span class="name"></span> /&gt;</span>
      </div>
    </div>
  </div>
  <div class="resize-container"></div>
  <div class="state-pane-container">
    <div class="header">Component: </div>
    <div>
      <i>No Component Data</i>
    </div>
  </div>
</div>
`;

exports[`flattenIds should flatten object into an array 1`] = `
Array [
  1,
  2,
  5,
  4,
]
`;
